@@ -184,3 +184,5 @@
 - Pari/GP 2.12 beta has rewritten (much faster) Bernoulli.  Check it out.
 
 - semiprime_count PP just walk if small range.
+
+- nth_semiprime:  PP, PPFE, docs, test
